<resources>
    <string name="app_name">L CATALOG</string>
    <string name="app_newName">L CATALOG</string>
    <string name="powered_by">Powered by</string>
    <string name="company_name">Immersion Software Labs</string>
    <string name="tag_line">…the next big immersive experience</string>

    <string name="Rs">\u20B9</string>

    <string name="slide2_desc">Augment will let you see the object chosen by you augmented into the real world.</string>
    <string name="slide2_title">AUGMENT</string>
    <string name="slide3_title">360&#xb0; Object Rotation</string>
    <string name="slide3_desc">This feature lets you rotate the object in and around, to get a clear picture what you are exactly buying.</string>
    <string name="slide4_desc">This feature lets you capture the surrounds after the objects are augmented. Also lets you share between the close ones.</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">START</string>
    <string name="slide4_title_capture">CAPTURE</string>
    <string name="slide4_title_share">SHARE</string>
    <string name="powered_immersionslabs">Powered by Immersion Software Labs.</string>
    <string name="welcome_aboard">Welcome Aboard</string>
    <string name="firstly_who_you_are_matters">Firstly, Who you are matters !!</string>
    <string name="login_hint">If you are a customer already…</string>
    <string name="login_sign">OGIN</string>
    <string name="signup_sign">IGNUP</string>
    <string name="signup_hint">If you want to become a customer…</string>
    <string name="guest_sign">UEST</string>
    <string name="guest_hint">If you are a oneTime Shopper…</string>
    <string name="company_icon">Company Icon</string>
    <string name="name">My Name</string>
    <string name="address">My Address</string>
    <string name="email">My Email</string>
    <string name="mobile_number">My Number</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="nav_hi">Hi,</string>
    <string name="Logged_userName">UserName</string>
    <string name="email_phone_number">Email / phone number</string>
    <string name="nav_catalog">Catalog</string>
    <string name="menu_augment">Augment</string>
    <string name="menu_gallery">Gallery</string>
    <string name="_3d_text">360&#xb0; Object Rotation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="Catalogue">
        The goal of this product is to provide the opportunity to all the furniture vendors
        to deliver the customers the feel of having the furniture right in front of them
        without bringing the furniture home. This could bring down the availability cost at
        the store, manufacturing cost of the larger units drastically increases the
        customer-vendor interaction in a much sophisticated way. Along with all these, think
        about the situation where the user takes the furniture home and feels the article doesn’t
        fit as he felt at the showroom and he/she as in the customer thinks of returning the
        product, L-Catalogue will eradicate this problem and the huge transportation cost that
        is involved in this process."
    </string>

    <string name="objectives">
        This product helps you in the advertisement portal as in when the product is sent for
        advertising, the article will be advertised/displayed over the newspaper or on a local
        magazine or on a digital media, the vendor/manufacturer has the freedom to provide the
        pattern wherever possible, which helps users/customers to try the product the moment
        they see the product on the advertisement portal.\n\n

        This android app will have the capability of augmenting the furniture into the real world as in
        when the user/customer places the pattern at the right place as per the instructions. This
        product also lets the users/customers to reach out to the vendor/manufacturer instantly
        using a feedback form for each article provided in the catalogue if he/she needs a customized
        furniture. The vendor will be able to choose this option while product development depending
        upon his/her selling forte is static designer products or customized.
    </string>


    <string name="Definition">
        The L – Catalog is an Augmented reality (AR) catalogue which helps the furniture
        manufacturers/vendors to deliver the user/customer the furniture portability in the form of a
        pattern printed on a paper. Each manufacturer/vendor will be having an android application of
        his own in the Google playstore, which lets the user/ customer when installed this app on
        his/her android phone to scan the pattern provided by the manufacturer/vendor sticking it on
        the walls as per the instructions provided behind the pattern.\n\n

        For example, the instructions behind says 2ft above the surface/floor where you exactly
        want the furniture (if it is 4ft tall) to place inside your house. This process lets the
        user/customer to get the feel of the furniture in real world, without placing the furniture at the
        required place physically.
    </string>


    <string name="data">

       L – Catalogue is an android application that constitute of \n
            <br /> &#187; More than 100 3D furniture models which had multiple fabrics \n
            <br /> &#187; Each 3D furniture model is bound with a unique pattern.\n
            <br /> &#187; Each pattern will be provided with a set of instructions like at what height the pattern should be pasted on the wall from the surface.\n
            <br /> &#187; A camera screen that can recognize these patterns and augment into the real world
            <br /> &#187; This screen can recognize multiple patterns at a time i.e., it can augment all 3D models on to the real world .\n
            <br /> &#187; These 3D objects are intractable as in \n
            <br /> &#8226; Single Click displays the accurate dimensions of the object.\n
            <br /> &#8226; Double click lets the user choose the fabrics, if exist.\n
            <br /> &#8226; Long press opens the feedback message opens right below the object. \n
            <br /> &#187; The feedback screen lets the user to send a personal message to the vendor/ manufacturer if he/she needs a customization to the existing furniture object.\n
            <br /> &#187; Once submitted, the message will be tagged with the object ID as well as the User contact
        details, in case provided (One means is mandatory).\n
            <br /> &#187;  Once the user scans the articles, the user will be able to take a screenshot of the screen which
        lets the user to share the image between multiple apps which is a native feature. The
        tricky part is to take a screen shot as if the furniture exists in the real. There
        will be a Gallery Button in app  which shows the list of screenshots that were taken earlier using the L – Catalog app. \n
    </string>
    <string name="FeedBack_Subject">I am here to take your valuable FeedBack</string>
    <string name="New_password">New Password</string>
    <string name="ReEnter_new_password">Re Enter New Password</string>
    <string name="note_download">NOTE : Please click the download button before you click the 3d view, as it is already been disabled until you download</string>

    <string name="dummy_address">Chandra Layout, Bangalore- 560072</string>

    <string name="new_vendor_name">Your Company Name</string>
    <string name="new_vendor_address">Company Address</string>
    <string name="new_vendor_email">Company Email</string>
    <string name="new_vendor_ph_no">Mobile Number</string>
    <string name="new_vendor_alt_ph_no">Alternative Mobile Number</string>
    <string name="new_vendor_submit">SUBMIT / REGISTER</string>
    <string name="new_vendor_contact_person">Person to be Contacted</string>
    <string name="new_vendor_no_of_models_req">No of Models/Designs required (Approx)</string>
    <string name="new_vendor_state">In which State?</string>
    <string name="new_vendor_pincode">States PinCode?</string>
    <string name="new_vendor_location">Which City?</string>
    <string name="guest_details">Login as Guest</string>
    <string name="autofill_details">Auto Fill</string>
    <string name="my_profile">My profile</string>
    <string name="profile_account">My Account</string>
    <string name="profile_notifications">My Notifications</string>
    <string name="profile_favorites">My Favorites</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="become_a_vendor">Become a Vendor?</string>
    <string name="vendor_registration">Vendor Registration</string>
    <string name="help_amp_support">Help &amp; Support</string>
    <string name="support_feedback">FeedBack</string>
    <string name="support_terms_conditions">Terms &amp; Conditions</string>
    <string name="support_help">Help Center</string>
    <string name="support_about">About</string>
    <string name="support_faq">FAQ\'s</string>
    <string name="notifications">Notifications</string>
    <string name="what_is_l_catalog">What is L-CATALOG ?</string>
    <string name="product_objectives">Product Objectives ?</string>
    <string name="definition_and_description">Definition and Description :</string>
    <string name="product_overview">Product Overview :</string>
    <string name="contact_us">Contact Us :</string>
    <string name="icon_linkedin">LinkedIn</string>
    <string name="icon_facebook">Facebook</string>
    <string name="icon_instagram">Instagram</string>
    <string name="icon_twitter">Twitter</string>
    <string name="icon_youtube">YouTube</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_subject">Hi welcome to the Lucid Lean Labs and you can avail so many offers from Lucid Lean Labs.</string>
    <string name="feedback_submit">THANK YOU</string>
    <string name="submit">Submit</string>
    <string name="catalog_description">My description.</string>
    <string name="discount_percentage">20%</string>
    <string name="discount_price">800/-</string>
    <string name="price_Tag">/-</string>
    <string name="original_price">1000</string>

    <string name="catalog_title">My Name </string>
    <string name="discount_price_title">AFTER DISCOUNT PRICE:</string>
    <string name="discount_title">Discount -</string>
    <string name="original_price_title">ORIGINAL PRICE:</string>
    <string name="product_share">share</string>
    <string name="btn_edit_profile">EDIT PROFILE</string>
    <string name="btn_update_profile">UPDATE PROFILE</string>
    <string name="notifications_text">Hi welcome to the Immersion Software Labs and you can avail so many offers from Lucid Lean Labs.</string>

</resources>
