<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserAccountActivity"
    tools:showIn="@layout/activity_user_account">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_24"
        android:paddingRight="@dimen/margin_24"
        android:paddingTop="@dimen/margin_30">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/margin_75"
                android:layout_height="@dimen/margin_75"
                android:contentDescription="@string/company_icon"
                android:src="@drawable/companyicon" />

            <TextView
                android:id="@+id/application_name"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/app_newName"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_max" />

        </LinearLayout>


        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_3"
            android:layout_marginTop="@dimen/margin_3"
            android:textColorHint="@color/primary_dark">

            <EditText
                android:id="@+id/user_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Address Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_input_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_3"
            android:layout_marginTop="@dimen/margin_3"
            android:textColorHint="@color/primary_dark">

            <EditText
                android:id="@+id/user_input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>


        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_3"
            android:layout_marginTop="@dimen/margin_3"
            android:textColorHint="@color/primary_dark"
            android:visibility="visible">

            <EditText
                android:id="@+id/user_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- mobile number -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_input_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_3"
            android:layout_marginTop="@dimen/margin_3"
            android:textColorHint="@color/primary_dark"
            android:visibility="visible">

            <EditText
                android:id="@+id/user_input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Edit Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_edit_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_3"
            android:padding="@dimen/margin_12"
            android:text="@string/btn_edit_profile"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_medium"
            android:visibility="visible" />

        <!-- Update Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_update_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_3"
            android:padding="@dimen/margin_12"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/btn_update_profile"
            android:visibility="gone" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
