<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_3"
    android:background="@drawable/background_curves"
    app:cardBackgroundColor="@color/complete_transparent"
    app:cardCornerRadius="@dimen/margin_3">

    <RelativeLayout
        android:id="@+id/project_part_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/project_part_item_image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:id="@+id/project_part_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_100"
                android:src="@drawable/dummy_icon"
                android:adjustViewBounds="true"
                android:contentDescription="@string/company_icon"
                android:scaleType="fitCenter" />

        </LinearLayout>

        <TextView
            android:id="@+id/project_part_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/project_part_item_image_layout"
            android:gravity="center"
            android:maxLines="2"
            android:padding="@dimen/margin_3"
            android:text="@string/catalog_title"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/project_part_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/project_part_name"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLength="80"
            android:maxLines="2"
            android:padding="@dimen/margin_3"
            android:text="@string/catalog_description"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_size_small"
            android:textStyle="italic" />
    </RelativeLayout>

</android.support.v7.widget.CardView>