<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_6"
    android:background="@drawable/background_curves"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/project_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_200"
            android:layout_gravity="center"
            android:background="@color/complete_transparent"
            android:gravity="center">

            <ImageView
                android:id="@+id/project_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/dummy_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/transparent"
                android:gravity="bottom"
                android:orientation="vertical"
                android:padding="@dimen/margin_10">

                <TextView
                    android:id="@+id/project_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/overlock_sc"
                    android:maxLines="1"
                    android:text="@string/catalog_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_xxlarge"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/project_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:ellipsize="end"
            android:fontFamily="@font/assistant_semibold"
            android:maxLines="2"
            android:padding="@dimen/margin_10"
            android:text="@string/notifications_subject"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large" />

    </LinearLayout>

</android.support.v7.widget.CardView>