<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_3"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/margin_3">

    <RelativeLayout
        android:id="@+id/wish_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/wish_item_image_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/wish_item_image"
                        android:layout_width="@dimen/margin_100"
                        android:layout_height="@dimen/margin_100"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/wish_item_name_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/wish_item_image_area"
                        android:background="@color/transparent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/margin_3">

                        <TextView
                            android:id="@+id/wish_item_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/overlock_sc"
                            android:text="@string/catalog_title"
                            android:textAllCaps="true"
                            android:textColor="@color/primary_dark"
                            android:textSize="@dimen/text_size_large"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/wish_item_price_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/margin_3">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_3"
                            android:fontFamily="@font/assistant_semibold"
                            android:text="@string/Rs"
                            android:textColor="@color/red" />

                        <TextView
                            android:id="@+id/wish_item_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/assistant_semibold"
                            android:text="@string/original_price"
                            android:textColor="@color/red"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/assistant_semibold"
                            android:text="@string/price_Tag"
                            android:textColor="@color/red"
                            android:textSize="@dimen/text_size_small" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="end">


            <LinearLayout
                android:id="@+id/wish_item_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/transparent"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:padding="@dimen/margin_3">

                <TextView
                    android:id="@+id/wish_item_delete_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Delete"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>